--- a/app/views/month-end/witnesses.html
+++ b/app/views/month-end/witnesses.html
@@ -74,7 +74,7 @@
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                    <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="./witness-expenses-summary.html">19 Mar 2025 at 09:10</a></td>
                     <td class="govuk-table__cell">Witness expenses report</td>
                     <td class="govuk-table__cell">{{data['businessUnit']}}</td>
                     <td class="govuk-table__cell">jane.smith</td>
@@ -102,15 +102,17 @@
                         <th class="govuk-table__header" scope="col" aria-sort="none">Business unit</th>
                         <th class="govuk-table__header" scope="col" aria-sort="none">Created by</th>
                         <th class="govuk-table__header" scope="col" aria-sort="none">Status</th>
+                        <th class="govuk-table__header empty" scope="col" aria-sort="none"></th>
                     </tr>
                     </thead>
                     <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="#">19 Mar 2025 at 09:10</a></td>
+                        <td class="govuk-table__cell"><a class="govuk-link govuk-link--no-visited-state" href="./witness-expenses-summary.html">19 Mar 2025 at 09:10</a></td>
                         <td class="govuk-table__cell">Witness expenses report</td>
                         <td class="govuk-table__cell">{{data['businessUnit']}}</td>
                         <td class="govuk-table__cell">jane.smith</td>
-                        <td class="govuk-table__cell">In progress</td>
+                        <td class="govuk-table__cell">No records</td>
+                    <td class="govuk-table__cell download"><a class="govuk-link govuk-link--no-visited-state" href="#">Download</a></td>
                     </tr>
                     </tbody>
                 </table>
