--- a/app/views/month-end/task-list.html
+++ b/app/views/month-end/task-list.html
@@ -32,7 +32,7 @@
                                 {
                                     href: "./select-business-unit.html",
                                     text: "Change",
-                                    classes: "govuk-link--no-visited-state",
+                                    classes: "",
                                     visuallyHiddenText: "business unit"
                                 }
                             ]
@@ -49,9 +49,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint" data-module="edge">
                     {% if data['suspenseCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./suspense.html?suspenseReturning=true" aria-describedby="suspense-report-status">Suspense report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./suspense.html?suspenseReturning=true" aria-describedby="suspense-report-status">Suspense report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./suspense.html" aria-describedby="suspense-report-status">Suspense report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./suspense.html" aria-describedby="suspense-report-status">Suspense report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -60,9 +60,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['bankReportCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bank-list.html?bankReportReturning=true" aria-describedby="bank-list-status">Bank report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./bank-list.html?bankReportReturning=true" aria-describedby="bank-list-status">Bank report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bank-list.html" aria-describedby="bank-list-status">Bank report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./bank-list.html" aria-describedby="bank-list-status">Bank report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -71,9 +71,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['courtFeesReportCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./court-fees-report.html?courtFeesReportReturning=true&transferredReturning=true" aria-describedby="court-fees-list-status">Court fees</a>
+                        <a class="govuk-link govuk-task-list__link " href="./court-fees-report.html?courtFeesReportReturning=true&transferredReturning=true" aria-describedby="court-fees-list-status">Court fees</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./court-fees-report.html" aria-describedby="court-fees-list-status">Court fees</a>
+                        <a class="govuk-link govuk-task-list__link " href="./court-fees-report.html" aria-describedby="court-fees-list-status">Court fees</a>
                     {% endif %}
                     </div>
                 </li>
@@ -82,9 +82,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['bacsPaymentReportCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bacs-payments.html?bacsPaymentReportReturning=true" aria-describedby="bacs-payments-status">BACS payments report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./bacs-payments.html?bacsPaymentReportReturning=true" aria-describedby="bacs-payments-status">BACS payments report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bacs-payments.html" aria-describedby="bacs-payments-status">BACS payments report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./bacs-payments.html" aria-describedby="bacs-payments-status">BACS payments report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -93,19 +93,19 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if (data['minorCreditorsPaidOut'] == "true" and data['majorCreditorsPaidOut'] == "true" and data['hmctsCreditorsPaidOut'] == "true")%}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./payout-minor.html?hmctsCreditorReturning=true" aria-describedby="payout-status">
+                        <a class="govuk-link govuk-task-list__link " href="./payout-minor.html?hmctsCreditorReturning=true" aria-describedby="payout-status">
                         Pay out
                         </a>                    
                     {% elseif (data['minorCreditorsPaidOut'] == "true" and data['majorCreditorsPaidOut'] == "true") %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./payout-minor.html?majorCreditorReturning=true" aria-describedby="payout-status">
+                        <a class="govuk-link govuk-task-list__link " href="./payout-minor.html?majorCreditorReturning=true" aria-describedby="payout-status">
                         Pay out
                         </a>                    
                     {% elseif data['minorCreditorsPaidOut'] == "true"  %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./payout-minor.html?minorCreditorReturning=true" aria-describedby="payout-status">
+                        <a class="govuk-link govuk-task-list__link " href="./payout-minor.html?minorCreditorReturning=true" aria-describedby="payout-status">
                         Pay out
                         </a>                    
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./payout-minor.html" aria-describedby="payout-status">
+                        <a class="govuk-link govuk-task-list__link " href="./payout-minor.html" aria-describedby="payout-status">
                         Pay out
                     </a>
                     {% endif %}
@@ -116,7 +116,7 @@
                 <!-- Print cheques -->
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
-                    <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./print-cheques.html" aria-describedby="print-cheques-status">
+                    <a class="govuk-link govuk-task-list__link " href="./print-cheques.html" aria-describedby="print-cheques-status">
                         Print cheques
                     </a>
                     </div>
@@ -126,9 +126,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['bacsFileCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bacs-file.html?bacsFileReportReturning=true" aria-describedby="bacs-file-status">BACS file report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./bacs-file.html?bacsFileReportReturning=true" aria-describedby="bacs-file-status">BACS file report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./bacs-file.html" aria-describedby="bacs-file-status">BACS file report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./bacs-file.html" aria-describedby="bacs-file-status">BACS file report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -137,9 +137,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['chequesReportCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./cheques-report.html?chequesReportReturning=true" aria-describedby="bacs-file-status">Cheques report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./cheques-report.html?chequesReportReturning=true" aria-describedby="bacs-file-status">Cheques report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./cheques-report.html" aria-describedby="bacs-file-status">Cheques report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./cheques-report.html" aria-describedby="bacs-file-status">Cheques report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -148,9 +148,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['reversedPaymentCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./outstanding-payment.html?reversedPaymentReturning=true" aria-describedby="outstanding-payment-status">Reversed payments report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./outstanding-payment.html?reversedPaymentReturning=true" aria-describedby="outstanding-payment-status">Reversed payments report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./outstanding-payment.html" aria-describedby="outstanding-payment-status">Reversed payments report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./outstanding-payment.html" aria-describedby="outstanding-payment-status">Reversed payments report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -159,9 +159,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['dishonouredChequeCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./dishonoured-cheques.html?dishonouredChequesReturning=true" aria-describedby="dishonoured-cheques-status">Dishonoured cheques report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./dishonoured-cheques.html?dishonouredChequesReturning=true" aria-describedby="dishonoured-cheques-status">Dishonoured cheques report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./dishonoured-cheques.html" aria-describedby="dishonoured-cheques-status">Dishonoured cheques report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./dishonoured-cheques.html" aria-describedby="dishonoured-cheques-status">Dishonoured cheques report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -170,9 +170,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['witnessCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./witnesses.html?witnessReturning=true" aria-describedby="witnesses-status">Witness expenses report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./witnesses.html?witnessReturning=true" aria-describedby="witnesses-status">Witness expenses report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./witnesses.html" aria-describedby="witnesses-status">Witness expenses report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./witnesses.html" aria-describedby="witnesses-status">Witness expenses report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -181,9 +181,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['writeOffCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./write-off-report.html?writeOffReturning=true" aria-describedby="witnesses-status">Write-off analysis report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./write-off-report.html?writeOffReturning=true" aria-describedby="witnesses-status">Write-off analysis report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./write-off-report.html" aria-describedby="witnesses-status">Write-off analysis report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./write-off-report.html" aria-describedby="witnesses-status">Write-off analysis report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -192,9 +192,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['controlTotalsCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./control-totals.html?controlTotalsReturning=true" aria-describedby="control-totals-status">Control totals report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./control-totals.html?controlTotalsReturning=true" aria-describedby="control-totals-status">Control totals report</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./control-totals.html" aria-describedby="control-totals-status">Control totals report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./control-totals.html" aria-describedby="control-totals-status">Control totals report</a>
                     {% endif %}
                     </div>
                 </li>
@@ -202,7 +202,7 @@
                 </ul>
 
 
-            <p class="govuk-body"><a href="../finance.html" class="govuk-link govuk-link--no-visited-state">Return to finance</a></p>
+            <p class="govuk-body"><a href="../finance.html" class="govuk-link ">Return to finance</a></p>
 
 
 
