visisted states added

--- a/app/views/month-end/task-list.html
+++ b/app/views/month-end/task-list.html
@@ -71,7 +71,7 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['courtFeesReportCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link " href="./court-fees-report.html?courtFeesReportReturning=true&transferredReturning=true" aria-describedby="court-fees-list-status">Court fees</a>
+                        <a class="govuk-link govuk-task-list__link " href="./court-fees-report.html?courtFeesReportReturning=true" aria-describedby="court-fees-list-status">Court fees</a>
                     {% else %}
                         <a class="govuk-link govuk-task-list__link " href="./court-fees-report.html" aria-describedby="court-fees-list-status">Court fees</a>
                     {% endif %}
