--- a/app/views/finance.html
+++ b/app/views/finance.html
@@ -34,7 +34,13 @@
        <a class="govuk-link--no-visited-state" href="./month-end/select-business-unit.html">
         Month end
        </a> 
-      </p>
+      </p>  
+
+      <p class="govuk-body">
+       <a class="govuk-link--no-visited-state" href="./quarter-year-end/quarter-year-end-report.html">
+        Quarter and year end
+       </a> 
+      </p>  
       
     </div>
   </div>
