--- a/app/views/month-end/bacs-file.html
+++ b/app/views/month-end/bacs-file.html
@@ -2,7 +2,7 @@
 
 {% set journeyName = "Daily checks" %}
 {% set headerCaption = data['businessUnit'] %}
-{% set pageName = "BACS file" %}
+{% set pageName = "BACS file report and major creditor remittances" %}
 
 {% block beforeContent %}
 
@@ -47,7 +47,7 @@
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
-                        html: 'Report in progress.'
+                        html: 'Report initiated.'
                     }) }}
                 {% else %}
                 {% endif %}
