--- a/app/views/month-end/major-c-bacs.html
+++ b/app/views/month-end/major-c-bacs.html
@@ -2,7 +2,7 @@
 
 {% set journeyName = "Daily checks" %}
 {% set headerCaption = data['businessUnit'] %}
-{% set pageName = "BACS file" %}
+{% set pageName = "BACS file report and major creditor remittances" %}
 
 {% block beforeContent %}
 
