--- a/app/views/month-end/task-list.html
+++ b/app/views/month-end/task-list.html
@@ -126,9 +126,9 @@
                 <li class="govuk-task-list__item govuk-task-list__item--with-link">
                     <div class="govuk-task-list__name-and-hint">
                     {% if data['bacsFileCreated'] == "true" %}
-                        <a class="govuk-link govuk-task-list__link " href="./bacs-file.html?bacsFileReportReturning=true" aria-describedby="bacs-file-status">BACS file report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./bacs-file.html?bacsFileReportReturning=true" aria-describedby="bacs-file-status">BACS file report and major creditor remittances</a>
                     {% else %}
-                        <a class="govuk-link govuk-task-list__link " href="./bacs-file.html" aria-describedby="bacs-file-status">BACS file report</a>
+                        <a class="govuk-link govuk-task-list__link " href="./bacs-file.html" aria-describedby="bacs-file-status">BACS file report and major creditor remittances</a>
                     {% endif %}
                     </div>
                 </li>
