--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -29,7 +29,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
       href: '../index.html'
     },
     serviceLabel: {
-      text: 'Opal',
+      html: '<strong>Opal</strong> | Enforcement',
       href: '../index.html'
     },
     navigation: {
