--- a/app/views/month-end/cheques-report.html
+++ b/app/views/month-end/cheques-report.html
@@ -23,7 +23,7 @@
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
-                        html: 'Report in progress.'
+                        html: 'Report initiated.'
                     }) }}
                 {% else %}
                 {% endif %}
