--- a/app/views/month-end/court-fees-report.html
+++ b/app/views/month-end/court-fees-report.html
@@ -44,7 +44,7 @@
                     {{ mojAlert({
                         variant: "success",
                         dismissible: false,
-                        html: 'Report in progress.'
+                        html: 'Report initiated.'
                     }) }}
                 {% else %}
                 {% endif %}
