link in footer added

--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -55,6 +55,9 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
               Reset prototype
             </a>
           </li>
+          <li class="govuk-footer__inline-list-item">
+            <a href="/clear-reports" class="govuk-footer__link">Clear created reports</a>
+          </li>
         </ul>
         <svg
           aria-hidden="true"
